Using real posts from the database and displaying in the template index.html. Minor changes in _post-card.css for displaying the post covers correctly.

--- a/djangoapp/blog/static/blog/css/pages/post.css
+++ b/djangoapp/blog/static/blog/css/pages/post.css
@@ -12,7 +12,8 @@
 .post-cover img {
   margin-top: 3rem;
   width: 100%;
-  height: auto;
+  height: 180px;
+  overflow: hidden;
   display: block;
   object-fit: cover;
   aspect-ratio: 16/6; /* landscape */
